# memory-hybrid

./: .gitignore  AGENTS.md  LICENSE  README.md  SKILL.md  config.yaml  pyproject.toml
backend/: .env.example  docker-compose.yml  mcp_server.py  pyrightconfig.json  requirements.txt
backend/api/: config.py  dashboard.py  lifecycle.py  main.py  models.py  neo4j_client.py  promotion.py  qdrant_client.py  review_flow.py  router.py  scoring.py
backend/storage/: __init__.py  file_mirror.py  schema.py  sqlite_store.py
backend/tools/: benchmark_cases.json  benchmark_memory.py  benchmark_retrieval.py  lifecycle_samples.json  lifecycle_scan.py
backend/tools/sample_memory/: decisions.yaml  facts.yaml  goals.yaml  timeline.json
backend/tools/sample_project/decisions/2026/05/: decision-1.md
backend/tools/sample_project/facts/curated/: python.yaml
backend/tools/sample_project/goals/: active.yaml
backend/tools/sample_project/remediation-candidates/: remediation-1.yaml  remediation-2.yaml
backend/tools/sample_project/timeline/2026/05/: 2026-05-21.md
docs/superpowers/specs/: 2026-05-29-enrichment-daemon-design.md
hardening/: review-log.yaml  rules.yaml
hardening/candidates/: 51a387731ba504f2.yaml  8d61e28c4c085e8d.yaml
hardening/history/: 20260521T053709-approve-8d61e28c4c085e8d.yaml
